import org.apache.tools.ant.taskdefs.condition.Os

buildscript {
    repositories {
        jcenter()
        maven { url "https://plugins.gradle.org/m2/" }
    }
    dependencies {
        classpath 'org.eclipse.jgit:org.eclipse.jgit:5.0.1.201806211838-r'
        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
        classpath 'com.adarshr:gradle-test-logger-plugin:2.1.0'
        classpath 'com.github.jengelman.gradle.plugins:shadow:6.0.0'
    }
}

group 'com.radix.regression'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'com.adarshr.test-logger'

repositories {
    mavenCentral()
    maven {
        url 'https://maven.pkg.github.com/radixdlt/maven-packages'
        credentials {
            username = System.getenv("GPR_USER") ?: ''
            password = System.getenv("GPR_TOKEN") ?: ''
        }
    }
    maven { url 'https://jitpack.io' }
}

test {
    if (Os.isFamily(Os.FAMILY_UNIX)) { // there's no reason to set these properties on windows
        systemProperty 'java.security.egd', 'file:/dev/urandom'
        systemProperty 'javax.net.ssl.trustStore', '/etc/ssl/certs/java/cacerts'
        systemProperty 'javax.net.ssl.trustStoreType', 'jks'
    }
    systemProperties System.getProperties()
}

subprojects {
    compileJava {
        options.release = 11
    }
}

dependencies {
    compile 'com.radixdlt:radixdlt-java:rc~1.0-beta.19-SNAPSHOT'
    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.14'
    compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
    testCompile group: 'io.cucumber', name: 'cucumber-java', version: '6.8.1'
    testCompile group: 'io.cucumber', name: 'cucumber-junit', version: '6.8.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.0'
}
